--- a/templates/patient/patient_delete.html
+++ b/templates/patient/patient_delete.html
@@ -13,7 +13,7 @@
           <div class="card w-2 border-0">
             <div class="col">
 
-              {% if instance.title == "male" %}
+              {% if object.title == 'male' %}
               <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
               {% else %}
               <img src="/static/images/marilyn_monroe.png" class="card-img-top" width="55" height="45">
