import in curapacs v1

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
               <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
               <a class="dropdown-item" href="{% url 'patientCreate' %}">Patient erstellen</a>
-              <a class="dropdown-item" href="#">Patienten importieren</a>
+              <a class="dropdown-item" href="{% url 'patientsImport' %}">Patienten importieren</a>
             </div>
           </li>
 
