--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
       <h5 class="card-title">Patienten</h5>
       <a href="{% url 'patients' %}" button type="button" class="btn btn-link btn-sm">Patientenliste</a>
       <a href="{% url 'patientCreate' %}" button type="button" class="btn btn-link btn-sm">Patient erstellen</a>
-      <a href="#Patienten importieren" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
+      <a href="{% url 'patientsImport' %}" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
     </div>
   </div>
 
