error handling patient import from curamed to curapacs

--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <br>
-<h2>Neuer Patient hinzufügen</h2>
+<h2>Patient erstellen</h2>
 
 <form action='.' method='POST'> {% csrf_token %}
      
